--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="row">
                 <div class="sub-header">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="sub-header__container">
                             <div class="row">
                                 <ul class="sub-header__nav">
@@ -91,7 +91,7 @@
     <div class="sub-header__bread">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="b_crumbs cont">
                         <a href="/" class="b_crumbs_item">Главная</a>
                         <span>/</span>
@@ -108,13 +108,13 @@
     <div class="mainWrappen">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="box-gbo">
                         <h4 class="box-gbo__mainPhrase">Марки авто под установку ГБО</h4>
                         <div class="row">
 
                             <div class="box-fullLogo">
-                                <div class="col-md-3">
+                                <div class="col-xs-6 col-md-3">
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="index_model.html">
                                             <img class="box-avto__image"
@@ -144,7 +144,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-xs-6 col-md-3">
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="#">
                                             <img class="box-avto__image"
@@ -174,7 +174,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-xs-6 col-md-3">
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="#">
                                             <img class="box-avto__image"
@@ -204,7 +204,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-xs-6 col-md-3">
                                     <div class="box-fullLogo__item">
                                         <a class="box-avto" href="#">
                                             <img class="box-avto__image"
@@ -240,7 +240,7 @@
                                 <div class="box-aboutGbo">
                                     <div class="container">
                                         <div class="row">
-                                            <div class="col-md-4">
+                                            <div class="col-xs-4">
                                                 <div class="box-aboutGbo__itemText">
                                                     <h5 class="box-aboutGbo__phrase">Что-то про ГБО</h5>
                                                     <p class="box-aboutGbo__mainText">Lorem ipsum dolor sit amet,
@@ -257,7 +257,7 @@
                                                 </div>
 
                                             </div>
-                                            <div class="col-md-4">
+                                            <div class="col-xs-4">
                                                 <div class="box-aboutGbo__itemText">
                                                     <h5 class="box-aboutGbo__phrase">Что-то про ГБО2</h5>
                                                     <p class="box-aboutGbo__mainText">Lorem ipsum dolor sit amet,
@@ -272,7 +272,7 @@
                                                 </div>
 
                                             </div>
-                                            <div class="col-md-4">
+                                            <div class="col-xs-4">
                                                 <div class="box-aboutGbo__itemText">
                                                     <h5 class="box-aboutGbo__phrase">Что-то про ГБО3</h5>
                                                     <p class="box-aboutGbo__mainText">Lorem ipsum dolor sit amet,
@@ -299,11 +299,11 @@
                     </div>
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-xs-12">
                                 <div class="box-sliderOne">
                                     <h4 class="box-gbo__mainPhrase">Портфолио работ по ГБО</h4>
 
-                                    <ul class="box-sliderOne__items ">
+                                    <ul class="box-sliderOne__items">
                                         <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide1.jpg"
                                             data-src="img/slider1/slide1.jpg">
                                             <img src="img/slider1/slide1.jpg" title="" alt="slider1">
