--- a/index_offers.html
+++ b/index_offers.html
@@ -48,14 +48,14 @@
     <div class="box-header-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
                     <!-- вставляеться стандартная шапка-->
                 </div>
             </div>
             <div class="row">
                 <div class="sub-header">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="sub-header__container">
                             <div class="row">
                                 <ul class="sub-header__nav">
@@ -90,7 +90,7 @@
     <div class="sub-header__bread">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="b_crumbs cont">
                         <a href="/" class="b_crumbs_item">Главная</a>
                         <span>/</span>
@@ -111,10 +111,10 @@
     <div class="mainWrappen">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="box-offers">
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-xs-6">
                                 <a class="box-gbo__link" href="index_portfolio.html">
                                     <div class="box-gbo__offer">
                                         <img class="box-gbo__offer-image" src="../img/offers/daewoo-l__1.png" title="" alt="gbo">
@@ -130,7 +130,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-xs-6">
                                 <a class="box-gbo__link" href="#">
                                     <div class="box-gbo__offer">
                                         <img class="box-gbo__offer-image"
@@ -151,7 +151,7 @@
                         <div class="box-gboInfo">
 
                                 <div class="row">
-                                    <div class="col-md-12">
+                                    <div class="col-xs-12">
                                         <div class="box-gboInfo_item">
                                             <img class="box-gboInfo_img" src="img/GBO/landi.png" title="" alt="gbo">
                                             <p class="box-gboInfo__price">Цена: <span class="prace-gbo__uah">9550</span>/<span
@@ -195,7 +195,7 @@
 
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-xs-12">
                                     <div class="box-sliderOffers">
                                         <h4 class="box-gbo__mainPhrase">Портфолио работ по ГБО на Audi</h4>
 
@@ -251,7 +251,7 @@
     <!--<div class="box-footer-wrappen">-->
         <!--<div class="container">-->
             <!--<div class="row">-->
-                <!--<div class="col-md-12">-->
+                <!--<div class="col-xs-12">-->
                     <!--<div class="footerImg">-->
                         <!--<img src="img/footer1200.png" title="" alt="footer">-->
                     <!--</div>-->
