--- a/index_model.html
+++ b/index_model.html
@@ -55,7 +55,7 @@
             </div>
             <div class="row">
                 <div class="sub-header">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="sub-header__container">
                             <div class="row">
                                 <ul class="sub-header__nav">
@@ -90,7 +90,7 @@
     <div class="sub-header__bread">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="b_crumbs cont">
                         <a href="/" class="b_crumbs_item">Главная</a>
                         <span>/</span>
@@ -109,12 +109,12 @@
     <div class="mainWrappen">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <h4 class="box-avtoModdel__mainPhrase">Модель авто под установку ГБО</h4>
 
                     <div class="box-avtoModdel">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-xs-4">
                                 <a href="index_offers.html">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" title=""  alt="audi">
@@ -134,7 +134,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-4">
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" title="" alt="audi">
@@ -154,7 +154,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-4">
                                 <a href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" title="" alt="audi">
