--- a/index_portfolio.html
+++ b/index_portfolio.html
@@ -49,14 +49,14 @@
     <div class="box-header-wrapper">
         <div class="container">
             <div class="row">
-                <!--<div class="col-md-12">-->
+                <!--<div class="col-xs-12">-->
                     <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
                     <!--&lt;!&ndash; вставляеться стандартная шапка&ndash;&gt;-->
                 <!--</div>-->
             </div>
             <div class="row">
                 <div class="sub-header">
-                    <div class="col-md-12">
+                    <div class="col-xs-12">
                         <div class="sub-header__container">
                             <div class="row">
                                 <ul class="sub-header__nav">
@@ -91,7 +91,7 @@
     <div class="sub-header__bread">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="b_crumbs cont">
                         <a href="/" class="b_crumbs_item">Главная</a>
                         <span>/</span>
@@ -112,16 +112,16 @@
     <div class="mainWrappen">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12">
                     <div class="box-porfolio">
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-xs-8">
                                 <div class="box-porfolioImg">
                                     <img class="box-porfolioImg__image" src="img/portfolio/Audi/Audi_car.jpg"
                                          title="" alt="autoPotrtfolio">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-4">
                                 <div class="box-porfolioText">
                                     <h4 class="box-porfolioText__phrase">Работы проведенные по установке ГБО на
                                         Audi </h4>
@@ -132,7 +132,7 @@
                                         Ab dolore doloremque incidunt nesciunt numquam. Accusantium dicta, eveniet, illo inventore labore laboriosam laborum molestias mollitia nam, odit optio provident qui repellat similique veniam. Fuga quae sint sunt unde vitae.</span>
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-xs-8">
                                 <div class="box-porfolioText">
                                     <h4 class="box-porfolioText__phrase">Улучшенные показатели Audi при установленом
                                         ГБО </h4>
@@ -143,7 +143,7 @@
                                         Ab dolore doloremque incidunt nesciunt numquam. Accusantium dicta, eveniet, illo inventore labore laboriosam laborum molestias mollitia nam, odit optio provident qui repellat similique veniam. Fuga quae sint sunt unde vitae.</span>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-xs-4">
                                 <div class="box-porfolioImg">
                                     <img class="box-porfolioImg__image" src="img/portfolio/Audi/Audi_kapot1.jpg"
                                          title="" alt="autoPotrtfolio">
@@ -151,7 +151,7 @@
                             </div>
 
 
-                            <div class="col-md-12">
+                            <div class="col-xs-12">
                                 <div class="box-porfolioText">
                                     <h4 class="box-porfolioText__phrase">Как изменились показатели после установки
                                         ГБО </h4>
@@ -164,11 +164,11 @@
                                         Blanditiis corporis cum deserunt esse eveniet, fugit officiis pariatur sint.        </span>
                                 </div>
                             </div>
-                            <div class="col-md-6"><div class="box-porfolioImg">
+                            <div class="col-xs-6"><div class="box-porfolioImg">
                                     <img class="box-porfolioImg__image" src="img/portfolio/Audi/Audi-A5_554.jpg"
                                          title="" alt="autoPotrtfolio">
                                 </div></div>
-                            <div class="col-md-6"><div class="box-porfolioImg">
+                            <div class="col-xs-6"><div class="box-porfolioImg">
                                     <img class="box-porfolioImg__image" src="img/portfolio/Audi/Audi_motor490.jpg"
                                          title="" alt="autoPotrtfolio">
                                 </div></div>
@@ -195,7 +195,7 @@
     <!--<div class="box-footer-wrappen">-->
         <!--<div class="container">-->
             <!--<div class="row">-->
-                <!--<div class="col-md-12">-->
+                <!--<div class="col-xs-12">-->
                     <!--<div class="footerImg">-->
                         <!--<img src="img/footer1200.png" title="" alt="footer">-->
                     <!--</div>-->
