--- a/index_offers.html
+++ b/index_offers.html
@@ -48,37 +48,38 @@
     <div class="box-header-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
-                    <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
-                    <!-- вставляеться стандартная шапка-->
-                </div>
+                <!--<div class="col-md-12">-->
+                <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
+                <!--&lt;!&ndash; вставляеться стандартная шапка&ndash;&gt;-->
+                <!--</div>-->
             </div>
             <div class="row">
-                <div class="sub-header">
-                    <div class="col-xs-12">
+                <div class="col-xs-12">
+                    <div class="sub-header">
+
                         <div class="sub-header__container">
-                            <div class="row">
-                                <ul class="sub-header__nav">
 
-                                    <li class="sub-header__item"><a href="#">ГБО</a></li>
+                            <ul class="sub-header__nav">
 
-
-                                    <li class="sub-header__item"><a href="#">СТО</a></li>
+                                <li class="sub-header__item"><a href="#">ГБО</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">СТО</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
 
-                                </ul>
-                            </div>
+
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
+
+                            </ul>
+
                         </div>
                     </div>
                 </div>
