--- a/index_model.html
+++ b/index_model.html
@@ -49,36 +49,37 @@
         <div class="container">
             <div class="row">
                 <!--<div class="col-md-12">-->
-                    <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
-                    <!--&lt;!&ndash; вставляеться стандартная шапка&ndash;&gt;-->
+                <!--<img class="HEADER_img" src="img/header1200.png" title="" alt="header">-->
+                <!--&lt;!&ndash; вставляеться стандартная шапка&ndash;&gt;-->
                 <!--</div>-->
             </div>
             <div class="row">
-                <div class="sub-header">
-                    <div class="col-xs-12">
+                <div class="col-xs-12">
+                    <div class="sub-header">
+
                         <div class="sub-header__container">
-                            <div class="row">
-                                <ul class="sub-header__nav">
 
-                                    <li class="sub-header__item"><a href="#">ГБО</a></li>
+                            <ul class="sub-header__nav">
 
-
-                                    <li class="sub-header__item"><a href="#">СТО</a></li>
+                                <li class="sub-header__item"><a href="#">ГБО</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">СТО</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
 
 
-                                    <li class="sub-header__item"><a href="#">раздел</a></li>
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
 
-                                </ul>
-                            </div>
+
+                                <li class="sub-header__item"><a href="#">раздел</a></li>
+
+                            </ul>
+
                         </div>
                     </div>
                 </div>
@@ -114,60 +115,60 @@
 
                     <div class="box-avtoModdel">
                         <div class="row">
-                            <div class="col-xs-4">
-                                <a href="index_offers.html">
+                            <div class="col-md-4 col-xs-12">
+                                <a class="box-avtoModdel__link" href="index_offers.html">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" title=""  alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A6Limousine.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A6 Limousin</p>
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A8.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A8 </p>
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-xs-4">
-                                <a href="#">
+                            <div class="col-md-4 col-xs-12">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A6Limousine.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A6 Limousin</p>
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A8.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A8 </p>
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-xs-4">
-                                <a href="#">
+                            <div class="col-md-4 col-xs-12">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a class="box-avtoModdel__link" href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A6Limousine.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A6 Limousin</p>
                                     </div>
                                 </a>
-                                <a href="#">
+                                <a class="box-avtoModdel__link"  href="#">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A8.png" title="" alt="audi">
                                         <p class="box-avtoModdel__name">A8 </p>
