--- a/index_portfolio.html
+++ b/index_portfolio.html
@@ -115,13 +115,13 @@
                 <div class="col-xs-12">
                     <div class="box-porfolio">
                         <div class="row">
-                            <div class="col-xs-8">
+                            <div class="col-md-8 col-xs-12">
                                 <div class="box-porfolioImg">
                                     <img class="box-porfolioImg__image" src="img/portfolio/Audi/Audi_car.jpg"
                                          title="" alt="autoPotrtfolio">
                                 </div>
                             </div>
-                            <div class="col-xs-4">
+                            <div class="col-md-4 col-xs-12">
                                 <div class="box-porfolioText">
                                     <h4 class="box-porfolioText__phrase">Работы проведенные по установке ГБО на
                                         Audi </h4>
@@ -132,7 +132,7 @@
                                         Ab dolore doloremque incidunt nesciunt numquam. Accusantium dicta, eveniet, illo inventore labore laboriosam laborum molestias mollitia nam, odit optio provident qui repellat similique veniam. Fuga quae sint sunt unde vitae.</span>
                                 </div>
                             </div>
-                            <div class="col-xs-8">
+                            <div class="col-md-8 col-xs-12 ">
                                 <div class="box-porfolioText">
                                     <h4 class="box-porfolioText__phrase">Улучшенные показатели Audi при установленом
                                         ГБО </h4>
@@ -143,7 +143,7 @@
                                         Ab dolore doloremque incidunt nesciunt numquam. Accusantium dicta, eveniet, illo inventore labore laboriosam laborum molestias mollitia nam, odit optio provident qui repellat similique veniam. Fuga quae sint sunt unde vitae.</span>
                                 </div>
                             </div>
-                            <div class="col-xs-4">
+                            <div class="col-md-4 col-xs-12 ">
                                 <div class="box-porfolioImg">
                                     <img class="box-porfolioImg__image" src="img/portfolio/Audi/Audi_kapot1.jpg"
                                          title="" alt="autoPotrtfolio">
