--- a/index_offers.html
+++ b/index_offers.html
@@ -115,7 +115,7 @@
                 <div class="col-xs-12">
                     <div class="box-offers">
                         <div class="row">
-                            <div class="col-xs-6">
+                            <div class="col-md-6 col-xs-12">
                                 <a class="box-gbo__link" href="index_portfolio.html">
                                     <div class="box-gbo__offer">
                                         <img class="box-gbo__offer-image" src="../img/offers/daewoo-l__1.png" title="" alt="gbo">
@@ -131,7 +131,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-xs-6">
+                            <div class="col-md-6 col-xs-12">
                                 <a class="box-gbo__link" href="#">
                                     <div class="box-gbo__offer">
                                         <img class="box-gbo__offer-image"
